crates/elm-client-gen-derive-tests/tests/compile_fail/externally_tagged_enum.stderr
error: enums with non-unit variants need either #[serde(tag = "...")] (internally tagged: variants serialize as `{ "<tag>": "<variant>", ... }`) or #[serde(untagged)] (no discriminator; decoder tries variants in order). serde's default externally-tagged shape `{ "<variant>": <payload> }` isn't currently supported by ElmType
 --> tests/compile_fail/externally_tagged_enum.rs:5:10
  |
5 | pub enum Event {
  |          ^^^^^
